tests/codegen/fail/union/enum_same_type_pretty.stderr
error: GraphQL union must have a different type for each union variant
       · note: https://spec.graphql.org/October2021#sec-Unions

 --> fail/union/enum_same_type_pretty.rs:4:1
  |
4 | enum Character {
  | ^^^^
